# RU

./: CMakeCache.txt  CMakeLists.txt  Compile.sh  Makefile  PetRU.cc  PositrigoRU  PositrigoRU-ImageProcessing  PositrigoRU.cc  README.md  cmake_install.cmake
Instructions/: Cortex_2DVOI.img  Cortex_eroded.img  Instruction_files.ipynb  Thalamus_eroded.img  zczubal.hdr
Testing/: Cortex_2DVOI.hdr  Cortex_eroded.hdr  Create_2D_Test_Images.ipynb  Thalamus_2DVOI.hdr  Thalamus_2DVOI.img  Thalamus_eroded.hdr  Thalamus_eroded.img  Zubal_2D.hdr  Zubal_2D.img
include/: ImageProcessingManager.hh  ImageSpace.hh  iImageProcessErode.hh  vImageProcess.hh
src/: ImageProcessingManager.cc  ImageSpace.cc  iImageProcessErode.cc  vImageProcess.cc
toolkits/: PetRU-ImageProcessing.cc  PositrigoRU-ImageProcessing.cc
